--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"start": "webpack-dev-server --open",
 		"dev": "webpack-dev-server --open",
 		"build": "webpack",
+		"lint": "tslint --project tsconfig.json --force --format stylish",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
@@ -37,6 +38,7 @@
 		"prettier": "1.13.4",
 		"ts-loader": "~4.3.1",
 		"tslint": "~5.10.0",
+		"tslint-eslint-rules": "^5.3.1",
 		"tslint-language-service": "~0.9.9",
 		"typescript": "~2.9.1",
 		"webpack": "~4.10.2",
