--- a/package.json
+++ b/package.json
@@ -32,17 +32,18 @@
 		"three": "~0.93.0"
 	},
 	"devDependencies": {
-		"@types/three": "~0.92.3",
+		"@types/three": "~0.92.4",
 		"clean-webpack-plugin": "~0.1.19",
+		"copy-webpack-plugin": "~4.5.1",
 		"html-webpack-plugin": "~3.2.0",
 		"prettier": "1.13.4",
 		"ts-loader": "~4.3.1",
 		"tslint": "~5.10.0",
-		"tslint-eslint-rules": "^5.3.1",
+		"tslint-eslint-rules": "~5.3.1",
 		"tslint-language-service": "~0.9.9",
 		"typescript": "~2.9.1",
-		"webpack": "~4.10.2",
-		"webpack-cli": "~3.0.2",
+		"webpack": "~4.11.1",
+		"webpack-cli": "~3.0.3",
 		"webpack-dev-server": "~3.1.4"
 	}
 }
